# gertty

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.md  README.rst  gertty.sh  gertty.yaml-sample  requirements.txt  setup.cfg  tox.ini
doc/: Makefile
doc/source/: conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  intro.rst  usage.rst
examples/: gerrit-gertty.yaml  googlesource-gertty.yaml  minimal-gertty.yaml  openstack-gertty.yaml  rdo-gertty.yaml  reference-gertty.yaml
gertty/: alembic.ini  app.py  auth.py  cli.py  commentlink.py  config.py  db.py  dbsupport.py  gertty.py  gitrepo.py  gui.py  keymap.py  mywid.py  palette.py  requestsexceptions.py  sync.py  version.py
gertty/alembic/: env.py
gertty/alembic/versions/: 1bb187bcd401_add_query_sync_table.py  1cdd4e2e74c_add_revision_indexes.py  254ac5fc3941_attach_comments_to_files.py  2a11dd14665_fix_account_table.py  312cd5a9f878_add_can_submit_column.py  3610c2543e07_add_conflicts_table.py  37a702b7f58e_add_last_seen_column_to_change.py  38104b4c1b84_added_project_updated_column.py  3cc7e3753dc3_add_hold.py  3d429503a29a_add_draft_fields.py  4388de50824a_add_topic_table.py  44402069e137_initial_schema.py  46b175bfa277_add_pending_actions.py  4a802b741d2f_add_starred.py  4cc9c46f9d8b_add_account_table.py  (+4 more)
gertty/search/: __init__.py  parser.py  test.py  tokenizer.py
gertty/view/: __init__.py  change.py  change_list.py  diff.py  mouse_scroll_decorator.py  project_list.py  side_diff.py  unified_diff.py
snap/: snapcraft.yaml
(+1 files in other folders)
