[metadata]
name = gertty
summary = Gertty is a console-based interface to the Gerrit Code Review system.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
keywords = gerrit console urwid review

[files]
packages =
    gertty
data_files =
    share/gertty/examples = examples/*

[entry_points]
console_scripts =
    gertty = gertty.app:main
